--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="UTF-8">
+<head>
 		<title>Kamil Kornas</title>
+		<meta charset="UTF-8">
+		<meta name="keywords" content="Kamil, Kornas, Webmaster, ZS6, Young">
+  	<meta name="author" content="Kamil Kornas">
+		<link rel="stylesheet" href="kornas.css" type="text/css">
 
-  </head>
-	<body>
-		asdassadsadasdassadasdsaddsdasdsaddad
-	</body>
+</head>
+<body>
+		<div class="header">
+		</div>
+		<div class="main">
+		</div>
+		<div class="footer">
+		</div>
+</body>
 </html>
