--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
 		<title>Kamil Kornas</title>
 		<meta charset="UTF-8">
 		<meta name="keywords" content="Kamil, Kornas, Webmaster, ZS6, Young">
-  	<meta name="author" content="Kamil Kornas">
-		<link rel="stylesheet" href="kornas.css" type="text/css">
+  		<meta name="author" content="Kamil Kornas">
+		<!--<link rel="stylesheet" href="kornas.css" type="text/css"> -->
+	<style>
+		body{
+		  background-color: #454140;
+		  height: 800px;
+		}
+		.header{
+
+		}
+		.footer{
+
+		}
+		.main{
+		  height: 100%;
+
+		}
+	</style>
 
 </head>
 <body>
