--- a/index.html
+++ b/index.html
@@ -5,23 +5,8 @@
 		<meta charset="UTF-8">
 		<meta name="keywords" content="Kamil, Kornas, Webmaster, ZS6, Young">
   		<meta name="author" content="Kamil Kornas">
-		<!--<link rel="stylesheet" href="kornas.css" type="text/css"> -->
-	<style>
-		body{
-		  background-color: #454140;
-		  height: 800px;
-		}
-		.header{
-
-		}
-		.footer{
-
-		}
-		.main{
-		  height: 100%;
-
-		}
-	</style>
+		<link rel="stylesheet" type="text/css" href="css/kornas.css">
+	
 
 </head>
 <body>
